# egg-web-demo

./: .gitignore  Cargo.toml  Makefile  README.md  package.json  wasm.d.ts  wasm.js  wasm_bg.wasm
.github/workflows/: build.yml
pkg/: wasm.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
src/: lib.rs  math.rs
static/: index.html
